# newickcpp

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
Catch_tests/: CMakeLists.txt  NewickStringTest.cpp  NodeTest.cpp
Catch_tests/fixtures/: nonbinary.nwk
newick_lib/: CMakeLists.txt  node.cpp  node.h  parser.cpp  parser.h  util.cpp  util.h
